# robotarmcase

./: .gitignore  build.rs  cargo.toml
.cargo/: config.toml
color_sensor/: Cargo.toml
color_sensor/src/: main.rs
colour_sensor/: Cargo.toml
colour_sensor/src/: main.rs
controller/: Cargo.toml
controller/src/: controller.rs  main.rs  reader.rs
dobot/: Cargo.toml  README.md
dobot/src/: main.rs
dobot/src/dobot/: base.rs  error.rs  message.rs  mod.rs
presence_sensor/: Cargo.toml
presence_sensor/src/: main.rs
resources/: types.idl
types/: Cargo.toml
types/src/: lib.rs
